--- a/index.html
+++ b/index.html
@@ -1,71 +1,82 @@
-<!doctype html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Canvasfilterbyscroll by henricavalcante</title>
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <title>ScrollFilterCanvas</title>
+    <style type="text/css">
+      canvas {
+        margin: 1000px 30px;
+      }
+    </style>
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Canvasfilterbyscroll</h1>
-        <p>A example to apply filter</p>
+    <div>scroll the page !!!</div>
+    <canvas id="canvas" width="452" height="452"></canvas>
+    <canvas id="canvas-aux" width="452" height="452"></canvas>
+    <script>
+    var canvas = document.getElementById('canvas'),
+      context = canvas.getContext('2d'),
+      canvasAux = document.getElementById('canvas-aux'),
+      contextAux = canvasAux.getContext('2d'),
+      isMobile = ((function() {
+        return (/Android|iPhone|iPad|iPod|BlackBerry/i).test(navigator.userAgent || navigator.vendor || window.opera);
+      })()),
+      //Ready to multiple images
+      loadImages = function loadImages(sources, callback) {
+        var images = {};
+        var loadedImages = 0;
+        var numImages = 0;
+        // get num of sources
+        for(var src in sources) {
+          numImages++;
+        }
+        for(var src in sources) {
+          images[src] = new Image();
+          images[src].crossOrigin = "Anonymous";
+          images[src].onload = function() {
+            if(++loadedImages >= numImages) {
+              callback(images);
+            }
+          };
+          images[src].src = sources[src];
+        }
+      },
+      //function that change pixels
+      imgFilter = function imgFilter(variable) {
+        img = contextAux.getImageData(0, 0, canvasAux.width, canvasAux.height),
+          pixels  = img.data;
+        for (var i = 0, n = pixels.length; i < n; i += 4) {
+          grayscale = pixels[i] * .3 + pixels[i+1] * .59 + pixels[i+2] * .11;
+          pixels[i  ] = grayscale;        // red
+          pixels[i+1] = grayscale;        // green
+          pixels[i+2] = pixels[i+2]*variable;        // blue
+        }
+        context.putImageData(img, 0, 0);
+      },
+      getScrollTop = function getScrollTop() {
+        return window.pageYOffset || document.body.scrollTop || 0;
+      },
+      sources = {
+        henri: 'https://avatars.githubusercontent.com/u/2352034?v=3'
+      };
 
-        <p class="view"><a href="https://github.com/henricavalcante/CanvasFilterByScroll">View the Project on GitHub <small>henricavalcante/CanvasFilterByScroll</small></a></p>
+      loadImages(sources, function(images) {
 
+        context.drawImage(images.henri, 0, 0);
 
-        <ul>
-          <li><a href="https://github.com/henricavalcante/CanvasFilterByScroll/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/henricavalcante/CanvasFilterByScroll/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/henricavalcante/CanvasFilterByScroll">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        imgData = context.getImageData(0, 0, canvas.width, canvas.height),
+          pixels  = imgData.data;
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+        contextAux.putImageData(imgData, 0, 0);
+        context.putImageData(imgData, 0, 0);
+        
+      });
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+      document.onscroll = function(e) {
+        var x = getScrollTop()%100/10;
+        imgFilter(x);
+        console.log(x);
+      };
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a id="rather-drive-stick" class="anchor" href="#rather-drive-stick" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/henricavalcante">henricavalcante</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
+    </script>
   </body>
 </html>
+
